# katzenqt

./: .gitignore  BUILD.md  HACKING.md  Makefile  README.md  README.setup.md  RUN.md  alembic.ini  conftest.py  contact-vouchers.md  font-settings.ui  language-settings.ui  mixchat-dev.ui  mixchat-original.ui  mixchat.ui  mixnet-status.ui  pushbuttons.ui  pyproject.toml  setup
.github/: disabled.build.yml
.github/workflows/: alembic-check.yml  integration-tests.yml  pytest.yml  test-integration-docker.yml
config/: alembic.ini  client.toml  client2.toml  kpclientd.service  thinclient.toml
migrations/: env.py
migrations/versions/: 6108dd0ca841_x.py  6bc3434dc7d9_mixwal_gets_a_uuid_pk_too.py  7094a18467be_mixwal_current_message_index.py  a430f7202849_first_go_at_receivedpiece.py
resources/: chatview.qml  katzen.desktop  resources.qrc
src/: headless.py  katzen.py  katzen_util.py  models.py  network.py  persistent.py  qt_models.py
src/katzenqt/: __init__.py  attachment_images.py  audio_ptt.py  conversation_handlers.py  headless.py  integration_runner.py  katzen.py  katzen_util.py  models.py  network.py  persistent.py  qt_models.py  resources_rc.py  theme.py  ui_font_settings.py  ui_mixchat.py  voucher.py
src/katzenqt/data/: thinclient.toml
src/katzenqt/headless/: __init__.py  __main__.py  _actions.py
src/katzenqt/migrations/: env.py
src/katzenqt/migrations/versions/: 0711d7a23cd9_tally_state.py  1422bffc8e28_make_first_unread_an_int_instead.py  2363e8f1cb58_indirection_support_in_plaintextwal.py  524576e2f8a5_stuff_for_tracking_if_we_have_sent_a_.py  5856f0a24fc9_store_envelope_descriptor_in_mixwal.py  5c851b1a68be_mixwal_keep_track_of_plaintextwal_for_.py  888b1ac7eca0_uuids.py  93eef61c3c54_sqlite_doesnt_like_64bit_integers.py  aa38593d6084_added_first_unread_to_conversation_to_.py  d08418a855a1_drop_mixwal_destination_column.py  ebaba8b49f83_pendingvoucher_table.py  f38b7d37f88a_settings.py
src/katzenqt/tally/: __init__.py  controller.py  engine.py  events.py  schema.py  send.py  sync.py
tests/: conftest.py  test_attachment_images.py  test_attachment_payload_decode.py  test_audio_attachment_playback.py  test_audio_ptt.py  test_config_resolution.py  test_file_upload_metadata.py  test_headless_cli.py  test_headless_module.py  test_index_invariants.py  test_katzen_util.py  test_models.py  test_models_tally.py  test_models_unserialize.py  test_network.py  test_network_fake.py  test_network_integration.py  test_qt_decoupling.py  test_runner_migration_bootstrap.py  test_tally_controller.py  test_tally_convergence.py  test_tally_engine.py  test_tally_sync.py  test_voucher_guard.py
tests/fakes/: __init__.py  thinclient.py
tests/integration/: conftest.py  test_alice_bob.py  test_alice_bob_file.py  test_alice_bob_long.py  test_restart.py  test_tally.py  test_voucher.py
tests/migrations/: _helper.py  test_upgrade.py  test_upgrade_drives_runner.py
ui/: language-settings.ui  light-dark.ui  mixchat.ui
