[project]
name = "katzen"
authors = []
description = "Mixnet chat application"
readme = "README.md"
classifiers = [
            "Programming Language :: Python :: 3.12"
]

requires-python = ">=3.11"
dynamic = ["version"]

dependencies = [
"pynacl==1.6.0",
"pyside6~=6.9.3",
# sqlalchemy
"sqlmodel>=0",
"alembic~=1.16.5",
"aiosqlite~=0.21.0",
"pydantic~=2.11.7",
"cbor2~=5.6.5", # kp_thinclient pins old minor version
"katzenpost_thinclient~=0.0.10"
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "hypothesis>=6.135.17",
]
release = [
    "nuitka~=2.7.12"
]

#[project.urls]
# Documentation =
# Source = =
# Tracker =

#[tool.pyside6-project]
#files = ["main.py", "main_window.py"]

#[tool.pyside6-uic]
#files = ["mixchat.ui"]

[tool.alembic]
script_location = "%(here)s/migrations"
prepend_sys_path = ["."]

[project.urls]
Homepage = "https://katzenpost.network/"
Repository = "https://github.com/katzenpost/katzenqt"
Issues = "https://github.com/katzenpost/katzenqt/issues"
