[project]
name = "katzenqt"
authors = []
description = "Mixnet chat application"
readme = "README.md"
classifiers = [
            "Programming Language :: Python :: 3.12"
]
license = { text = "Public Domain" }
requires-python = ">=3.11"
version = "0.0.1"

dependencies = [
"pynacl==1.6.0",
"pyside6~=6.9.3",
"sqlmodel>=0",
"alembic~=1.16.5",
"aiosqlite~=0.21.0",
"pydantic~=2.11.7",
"cbor2~=5.6.5",
"pycrdt~=0.13.1",
# Keep in lockstep with the katzenpost daemon ref in
# .github/workflows/test-integration-docker.yml.
"katzenpost_thinclient==0.0.23"
]

[dependency-groups]
dev = [
    "pip",
    "pytest>=8.4.0",
    "hypothesis>=6.135.17",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.6",
]
release = [
]

[project.scripts]
katzenqt = "katzenqt:cli"
katzenqt-headless = "katzenqt.headless:cli"

#[tool.pyside6-project]
#files = ["main.py", "main_window.py"]

#[tool.pyside6-uic]
#files = ["mixchat.ui"]

[tool.alembic]
script_location = "katzenqt:migrations"
prepend_sys_path = ["."]

[project.urls]
Homepage = "https://katzenpost.network/"
Repository = "https://github.com/katzenpost/katzenqt"
Issues = "https://github.com/katzenpost/katzenqt/issues"

[build-system]
requires = ["flit_core>=3.9"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "katzenqt"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=katzenqt --cov-report=term-missing --doctest-modules -vv"
testpaths = [
    "src",
    "tests",
]
markers = [
    "integration: docker-mixnet integration test (requires KATZENQT_DOCKER_INTEGRATION=1)",
    "real_sleeps: opt out of the autouse fast asyncio.sleep monkeypatch",
]
# We have to re-state the .hypothesis ignore that pytest defaults to,
# because setting norecursedirs at all replaces the built-in list
# wholesale rather than extending it.
norecursedirs = ["src/katzenqt/migrations", ".hypothesis"]

[tool.ruff]
line-length = 78
target-version = "py312"
